--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="description" content="">
 		<meta name="author" content="">
-		<title>Signin Template for Bootstrap</title>
+		<title>Crawler</title>
 		<!-- Bootstrap core CSS -->
 		<link href="asserts/css/bootstrap.min.css"  th:href="@{/asserts/css/bootstrap.min.css}" rel="stylesheet">
 		<!-- Custom styles for this template -->
@@ -13,7 +13,7 @@
 	</head>
 
 	<body class="text-center">
-		<form class="form-signin" action="dashboard.html" th:action="@{/login}">
+		<form class="form-signin" action="dashboard.html" th:action="@{/login}" method="post">
 			<img class="mb-4" src="asserts/img/bootstrap-solid.svg" th:src="@{/asserts/img/bootstrap-solid.svg}" alt="" width="72" height="72">
 			<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
 			<label class="sr-only">Username</label>
