--- a/src/main/resources/templates/customer/list.html
+++ b/src/main/resources/templates/customer/list.html
@@ -1,141 +1,92 @@
 <!DOCTYPE html>
+<!-- saved from url=(0052)http://getbootstrap.com/docs/4.0/examples/dashboard/ -->
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="asasa">
-    <meta name="author" content="eli">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
     <title>无验证码</title>
+    <!-- Bootstrap core CSS -->
     <link href="../../static/asserts/css/bootstrap.min.css" th:href="@{/asserts/css/bootstrap.min.css}"
           rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="../../static/asserts/css/dashboard.css" th:href="@{/asserts/css/dashboard.css}" rel="stylesheet">
     <style type="text/css">
-        .black_overlay {
-            display: none;
-            position: absolute;
-            top: 0%;
-            left: 0%;
-            width: 100%;
-            height: 100%;
-            background-color: black;
-            z-index: 1001;
-            -moz-opacity: 0.8;
-            opacity: .80;
-            filter: alpha(opacity=88);
+        /* Chart.js */
+
+        @-webkit-keyframes chartjs-render-animation {
+            from {
+                opacity: 0.99
+            }
+            to {
+                opacity: 1
+            }
         }
 
-        .white_content {
-            display: none;
-            position: absolute;
-            top: 3%;
-            left: 15%;
-            width: 70%;
-            height: 95%;
-            border: 10px solid black;
-            background-color: white;
-            z-index: 1002;
-            overflow: auto;
+        @keyframes chartjs-render-animation {
+            from {
+                opacity: 0.99
+            }
+            to {
+                opacity: 1
+            }
         }
     </style>
 </head>
-<body>
-<div id="light" class="white_content">
-    <!-- 显示区 -->
-    <div id="loggingText" contenteditable="true"
-         style="width:100%;height: 90%;background-color: ghostwhite; overflow: auto;"
-         onclick="document.getElementById('light').style.display='none';document.getElementById('fade').style.display='none'"></div>
 
-    <!-- 操作栏 -->
-    <div style="text-align: center;">
-        <button onclick="$('#loggingText').text('')" style="color: green; height: 35px;">清屏</button>
-        <button onclick="$('#loggingText').animate({scrollTop:$('#loggingText')[0].scrollHeight});"
-                style="color: green; height: 35px;">滚动至底部
-        </button>
-        <button onclick="if(window.loggingAutoBottom){$(this).text('开启自动滚动');}else{$(this).text('关闭自动滚动');};window.loggingAutoBottom = !window.loggingAutoBottom"
-                style="color: green; height: 35px; ">开启自动滚动
-        </button>
-    </div>
-    <a href="javascript:void(0)"
-       onclick="document.getElementById('light').style.display='none';document.getElementById('fade').style.display='none'">点这里关闭本窗口</a>
-</div>
-<div id="fade" class="black_overlay"></div>
+<body>
 <div class="container-fluid">
     <div class="row">
-        <nav class="navbar navbar-default navbar-fixed-top">
-            <div class="container">
-                <div class="btn-group">
-                    <a class="btn btn-success" th:href="@{/verifyCustomers}" th:text=" ${type}=='Y'?'无验证码':'验证码'">跳转</a>
-                    <button href="javascript:void(0)" th:href="@{/log}" class="btn btn-info"
-                            onclick="document.getElementById('light').style.display='block';document.getElementById('fade').style.display='block'">
-                        日志
-                    </button>
-                    <button class="btn btn-warning" th:onclick="retry()">重跑</button>
-                    <button class="btn btn-primary" th:onclick="refresh()">查看文件状态</button>
-                    <button class="btn btn-warning" th:onclick="handled()">待处理</button>
-                    <button class="btn btn-sm btn-danger" onclick="restart()">Restart</button>
-                </div>
-            </div>
-            <div style=" position: fixed; _position: absolute;left: 50%;top:10px;
-                    z-index: 1; " class="btn btn-sm btn-primary" onclick="show()">当前任务列表
-                <ol id="list" style="padding:10px;display:none">
-                </ol>
-            </div>
-        </nav>
-
-
-        <div th:fragment="table" id="sampleTableB" class="table-responsive">
-            <table id="sampleTableA" class="table table-striped table-sm">
-                <thead>
-                <tr>
-                    <th>#</th>
-                    <th>经销商代码</th>
-                    <th>经销商名称</th>
-                    <th>账号密码</th>
-                    <th>网址</th>
-                    <th>定时时间</th>
-                    <th>文件状态</th>
-                    <th>进度条</th>
-                    <th>下载文件</th>
-                    <th>加入任务</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="customer:${customers}">
-                    <td th:text="${customerStat.index}+1"></td>
-                    <td th:text="${customer.orgcode}"></td>
-                    <td>[[${customer.orgname}]]</td>
-                    <td th:text="${customer.params}"></td>
-                    <td><a th:href="${customer.website}" target="_blank">[[${customer.website}]]</a></td>
-                    <td th:text="${customer.dailyTime}"></td>
-                    <td th:class="exist" th:text="${customer.exist}"></td>
-                    <td style="padding-top: 10px">
-                        <div class="progress">
-                            <div th:id="${customer.orgcode}" class="progress-bar" role="progressbar"
-                                 aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0;">
-                            </div>
-                        </div>
-                    </td>
-                    <td>
-                        <a class="btn btn-sm btn-primary"
-                           th:onclick="download1([[${customer.orgcode}]])">下载</a>
-                    </td>
-                    <td>
-                        <a class="btn btn-sm btn-primary addBtn"
-                           th:onclick="addCode([[${customer.orgcode}]])">加入</a>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-            <div style=" position: fixed; _position: absolute;top: 10px; right: 1px; _bottom: auto;
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-12 pt-3 px-4">
+            <h2><a class="btn btn-sm btn-success" th:href="@{/verifyCustomers}" th:text="${type}=='Y'?'无验证码':'验证码'">跳转</a>
+                <input class="btn btn-sm btn-primary" style="margin-left: 50px" type="button" value="重跑" th:onclick="retry()"/>
+            </h2>
+            <div class="table-responsive">
+                <table id="sampleTableA" class="table table-striped table-sm">
+                    <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>经销商代码</th>
+                        <th>经销商名称</th>
+                        <th>账号密码</th>
+                        <th>网址</th>
+                        <th>定时时间</th>
+                        <th>加入任务</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="customer:${customers}">
+                        <td th:text="${customerStat.index}+1"></td>
+                        <td th:text="${customer.orgcode}"></td>
+                        <td>[[${customer.orgname}]]</td>
+                        <td th:text="${customer.params}"></td>
+                        <td><a th:href="${customer.website}" target="_blank">[[${customer.website}]]</a></td>
+                        <td th:text="${customer.dailyTime}"></td>
+                        <td>
+                            <a class="btn btn-sm btn-primary addBtn"
+                               th:onclick="addCode([[${customer.orgcode}]])">加入</a>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+                <div style=" position: fixed; _position: absolute;top: 10px; right: 1px; _bottom: auto;
                     padding: 1px;
                z-index: 9999999; width:100px; height:30px;" class="p-t_10">
-                <input class="btn btn-sm btn-primary" type="button" value="执行任务" th:onclick="startListen()"/>
+                    <input class="btn btn-sm btn-primary" type="button" value="执行任务" th:onclick="doCode()"/>
+                </div>
             </div>
-        </div>
+        </main>
     </div>
 </div>
 
-<script type="text/javascript" src="../../static/asserts/js/jquery.min.js"
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script type="text/javascript" src="../../static/asserts/js/jquery-3.2.1.slim.min.js"
         th:src="@{/webjars/jquery/3.4.1/jquery.min.js}"></script>
 <script type="text/javascript" src="../../static/asserts/js/popper.min.js"
         th:src="@{/asserts/js/popper.min.js}"></script>
@@ -144,81 +95,15 @@
 <script src="../../static/asserts/js/fancyTable.js" th:src="@{/asserts/js/fancyTable.js}"></script>
 <script type="text/javascript" th:inline="javascript">
     $(document).ready(function () {
-        table();
-        list();
-    });
-
-    function table() {
+        // And make them fancy
         $("#sampleTableA").fancyTable({
             sortColumn: 0,
             pagination: true,
-            perPage: 10,
+            perPage: 2,
             globalSearch: true
         });
-    }
+    });
 
-
-    //查看文件状态
-    function list() {
-        $.ajax({
-            url: "customers/list",
-            type: "GET",
-            cache: false,
-            async: false,
-            success: function (result) {
-                if (result['data'] != null) {
-                    var list = result['data'];
-                    console.log(list)
-                    var str = "";
-                    for (var i = 0; i < list.length; i++) {
-                        str += "<li >" + list[i]['orgcode'] + "</li>";
-                    }
-                    $('#list').html(str)
-                }
-            },
-            error: function () {
-                alert('服务器发生错误');
-            }
-
-        });
-    }
-
-    //刷新待处理文件
-    function handled() {
-        hide(refresh())
-    }
-
-    function hide(refresh) {
-        var list = $(".exist");
-        for (var i = 0; i < list.length; i++) {
-            var textContent = list[i].textContent;
-            textContent = textContent.substring(textContent.indexOf("[") + 1, textContent.indexOf("]"));
-            var strings = textContent.split(',');
-            console.log(strings[0]);
-            if (JSON.parse(strings[0]) && JSON.parse(strings[1])) {
-                list[i].parentElement.style.display = "none";
-            }
-        }
-    }
-
-    function refresh() {
-        $.ajax({
-            url: "customers/refresh",
-            type: "GET",
-            cache: false,
-            async: false,
-            success: function (result) {
-                $("#sampleTableB").html(result);
-                table();
-            },
-            error: function () {
-                alert('服务器发生错误');
-            }
-
-        });
-    }
-
-    //加入任务列表
     function addCode(orgCode) {
         $.ajax({
             url: "customers/add/" + orgCode,
@@ -226,13 +111,7 @@
             cache: false,
             async: false,
             success: function (result) {
-                if (result['code'] == 200) {
-                    var list = result['data'];
-                    var str = "";
-                    for (var i = 0; i < list.length; i++) {
-                        str += "<li>" + list[i]['orgcode'] + "</li>";
-                    }
-                    $('#list').html(str);
+                if (result['code']==200) {
                     alert("加入任务列表");
                 } else {
                     alert(result['message']);
@@ -245,29 +124,6 @@
         });
     }
 
-    //下载文件
-    function download1(orgCode) {
-        alert("aaa")
-        $.ajax({
-            url: "download/" + orgCode,
-            type: "POST",
-            cache: false,
-            async: false,
-            success: function (result) {
-                if (result['code'] == 200) {
-                    alert("加入任务列表");
-                } else {
-                    alert(result['message']);
-                }
-            },
-            error: function () {
-                alert('服务器发生错误');
-            }
-
-        });
-    }
-
-    //执行任务
     function doCode() {
         $.ajax({
             url: "customers/do",
@@ -275,14 +131,13 @@
             cache: false,
             async: false,
             success: function (result) {
-                if (result['code'] == 200) {
+                if (result['code']==200) {
                     alert(result['message']);
-                } else if (result['code'] == 500) {
+                }else if (result['code'] == 500) {
                     alert(result['message']);
-                } else {
+                }else {
                     alert("正在执行其他任务")
                 }
-                list()
             },
             error: function () {
                 alert('服务器发生错误');
@@ -291,7 +146,6 @@
         });
     }
 
-    //重跑
     function retry() {
         $.ajax({
             url: "customers/retry",
@@ -299,11 +153,11 @@
             cache: false,
             async: false,
             success: function (result) {
-                if (result['code'] == 200) {
+                if (result['code']==200) {
                     alert(result['message']);
-                } else if (result['code'] == 500) {
+                }else if (result['code'] == 500) {
                     alert(result['message']);
-                } else {
+                }else {
                     alert("正在执行其他任务")
                 }
             },
@@ -313,97 +167,6 @@
 
         });
     }
-
-
-    //当前任务列表
-    var flag = true;
-
-    function show() {
-        if (flag) {
-            $('#list').css('display', 'block');
-            flag = false;
-        } else {
-            $('#list').css('display', 'none');
-            flag = true;
-        }
-    }
-
-
-    //监听任务进度
-    function startListen() {
-        socket(doCode())
-    }
-
-    function socket(add) {
-        //websocket对象
-        let websocket = null;
-
-        //判断当前浏览器是否支持WebSocket
-        if ('WebSocket' in window) {
-            websocket = new WebSocket("ws://localhost:18080/websocket/2");
-
-        } else {
-            console.error("不支持WebSocket");
-        }
-        //连接发生错误的回调方法
-        websocket.onerror = function (e) {
-            console.error("WebSocket连接发生错误");
-        };
-
-        //连接成功建立的回调方法
-        websocket.onopen = function () {
-            console.log("WebSocket连接成功")
-        };
-
-        //接收到消息的回调方法
-        websocket.onmessage = function (event) {
-            var count = 0;
-            var list = JSON.parse(event.data);
-            var load = list.doStatus;
-            for (var key in load) {
-                var element = $('#' + key);
-                var sum = load[key][0] + load[key][1] + load[key][2];
-                switch (sum) {
-                    case 1:
-                        element.css("width", "30%");
-                        element.text("30%");
-                        break;
-                    case 2:
-                        element.css("width", "60%");
-                        element.text("60%");
-                        break;
-                    case 3:
-                        element.css("width", "100%");
-                        element.text("100%");
-                        count++;
-                        break;
-                }
-            }
-            var message = list.log;
-            //追加
-            if (message!=null) {
-                //日志内容
-                let $loggingText = $("#loggingText");
-                $loggingText.append(message);
-
-                //是否开启自动底部
-                if (window.loggingAutoBottom) {
-                    //滚动条自动到最底部
-                    $loggingText.scrollTop($loggingText[0].scrollHeight);
-                }
-            }
-            if (count === Object.keys(load).length) {
-                websocket.close();
-            }
-
-        };
-
-        //连接关闭的回调方法
-        websocket.onclose = function () {
-            console.log("WebSocket连接关闭")
-        };
-    }
-
 </script>
 </body>
 
